fix z-index progess window issue

--- a/client/src/app/shared/components/module-progress.component.scss
+++ b/client/src/app/shared/components/module-progress.component.scss
@@ -1,4 +1,4 @@
 :host {
-  z-index: 2;
+  z-index: 100;
   overflow: auto;
 }
